@@ -550,6 +550,7 @@ static const char *def_menu_sound[] =
     "mapper_recvoldown",
     "--",
     "mixer_info",
+    "midi_info",
     "--",
     "mixer_mute",
     "mixer_swapstereo",
