@@ -1,6 +1,6 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
-SUBDIRS = zmbv gui_tk porttalk mt32
+SUBDIRS = zmbv gui_tk porttalk mt32 fluidsynth
 
 if C_XBRZ
 SUBDIRS += xBRZ
